# oxsx

./: .gitignore  CMakeLists.txt  HOWTO.md  README.md  oxsx_container.def  simpleFit  simpleFit_result.txt
bench/: Bench.cpp  Bench.h
config/: SConscript  buildhelp.py  dependencies.ini  userconfig.ini.template
examples/: 1d_ReactorMonitoring_YongByon.cpp  2d_ReactorMonitoring_YongByon.cpp  AntinuUtils.cpp  AntinuUtils_old.cpp  CMakeLists.txt  Cuts.cpp  DataSetGeneration.cpp  MakeFakeData.cpp  MakeFakeData_PoissonFluc.cpp  MakeFakeData_escale_eres.cpp  MakeFakeData_scale_smear.cpp  MultiOscillation.cpp  MultiOscillation2.cpp  MultiOscillation2_old.cpp  MultiOscillation_eres.cpp  MultiOscillation_escale_eres.cpp  MultiOscillation_kamland.cpp  MultiOscillation_kamland_eres_fixed.cpp  Oscillation.cpp  OscillationFitTest.cpp  VaryingCDF.cpp  beestonBarlowLHH.cpp  myFit.cpp  new_MultiOscillation_scale_smear.cpp  reactor_sum.cpp  simpleFit.cpp  simpleOscillation.cpp  simpleSystematicFit.cpp  systematicFit.cpp
examples/data/: CMakeLists.txt  DataRepresentation.cpp  ObsSet_example.cpp  ROOTNtuple.cpp
examples/pdf/: AnalyticED_example.cpp  AnalyticPdf.cpp  AnalyticToBinnedConversion.cpp  BinnedED_example.cpp  BinnedPdf.cpp  CMakeLists.txt  CompositeED_example.cpp  CompositePdf.cpp  FillPdf.cpp
examples/plot/: CMakeLists.txt  ROOTOut.cpp
src/: CMakeLists.txt
src/config/: CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.hh  ConfigLoader.hpp  ini.hpp
src/constraint/: BivariateQuadraticConstraint.h  CMakeLists.txt  ConstraintManager.cpp  ConstraintManager.h  FractionalConstraint.h  QuadraticConstraint.h  RatioConstraint.h  ShapeConstraint.cpp  ShapeConstraint.h  ShapeInterpConstraint.cpp  ShapeInterpConstraint.h
src/core/: CMakeLists.txt  Combinations.cpp  Combinations.hpp  Comparison.hpp  ComponentManager.cpp  ComponentManager.h  ContainerParameter.h  ContainerParameter.hpp  ContainerTools.cpp  ContainerTools.hpp  DenseMatrix.cpp  DenseMatrix.h  DoubleParameter.h  Exceptions.h  FitComponent.h  FitParameter.h  Formatter.hpp  ParameterManager.cpp  ParameterManager.h  ParameterManager.hpp  SparseMatrix.cpp  SparseMatrix.h  TypeTraits.hpp
src/count/: CMakeLists.txt  CountingExperiment.cpp  CountingExperiment.h  CountingResult.cpp  CountingResult.h
src/cut/: BoolCut.cpp  BoolCut.h  BoxCut.cpp  BoxCut.h  CMakeLists.txt  Cut.h  CutCollection.cpp  CutCollection.h  CutLog.cpp  CutLog.h  LineCut.cpp  LineCut.h
src/data/: CMakeLists.txt  DataSet.h  DataSetGenerator.cpp  DataSetGenerator.h  Event.cpp  Event.h  IO.cpp  IO.h  LazyOXSXDataSet.cpp  LazyOXSXDataSet.h  OXSXDataSet.cpp  OXSXDataSet.h  ObsSet.cpp  ObsSet.h  ROOTNtuple.cpp  ROOTNtuple.h  ROOTTree.cpp  ROOTTree.h
src/eventSystematic/: CMakeLists.txt  EventConvolution.cpp  EventConvolution.h  EventReconvolution.cpp  EventReconvolution.h  EventScale.cpp  EventScale.h  EventShift.cpp  EventShift.h  EventSystematic.cpp  EventSystematic.h
src/fitutil/: BinnedEDManager.cpp  BinnedEDManager.h  BinnedEDShrinker.cpp  BinnedEDShrinker.h  CMakeLists.txt  EDManager.cpp  EDManager.h  EventSystematicManager.cpp  EventSystematicManager.h  SystematicManager.cpp  SystematicManager.h
src/function/: CMakeLists.txt  ConditionalPDF.h  Function.h  Gaussian.cpp  Gaussian.h  Gaussian.hpp  GaussianERes.cpp  GaussianERes.h  GaussianEResFitter.cpp  GaussianEResFitter.h  GaussianFitter.cpp  GaussianFitter.h  Heaviside.cpp  Heaviside.h  JumpPDF.cpp  JumpPDF.h  PDF.h  SquareRootScale.cpp  SquareRootScale.h  SurvProb.cpp  SurvProb.h  SurvProbFitter.cpp  SurvProbFitter.h  VaryingCDF.cpp  VaryingCDF.h
src/histogram/: AxisCollection.cpp  AxisCollection.h  BinAxis.cpp  BinAxis.h  CMakeLists.txt  HistTools.cpp  HistTools.h  HistTools.hpp  Histogram.cpp  Histogram.h
src/interval/: BayesIntervalCalc.cpp  BayesIntervalCalc.h  CMakeLists.txt
src/optimise/: AutoCorrelationCalc.cpp  AutoCorrelationCalc.h  CMakeLists.txt  FitResult.cpp  FitResult.h  Gradient.h  Gradient.hpp  GridSearch.cpp  GridSearch.h  HMCEnergy.h  HMCEnergy.hpp  HamiltonianSampler.h  HamiltonianSampler.hpp  LeapFrog.cpp  LeapFrog.h  LeapFrog.hpp  MCMC.cpp  MCMC.h  MCMCSamples.cpp  MCMCSamples.h  MCSampler.h  MetropolisHastings.cpp  MetropolisHastings.h  MetropolisSampler.cpp  MetropolisSampler.h  Minuit.cpp  Minuit.h  MinuitFCN.cpp  MinuitFCN.h  Optimiser.h  SigmoidBoundary.h  SigmoidBoundary.hpp
src/plot/: CMakeLists.txt  ROOTMultiPlot.cpp  ROOTMultiPlot.h
src/rand/: CMakeLists.txt  Rand.cpp  Rand.h
src/systematic/: CMakeLists.txt  Convolution.cpp  Convolution.h  NuOsc.cpp  NuOsc.h  Renorm.cpp  Renorm.h  Scale.cpp  Scale.h  ScaleFunction.cpp  ScaleFunction.h  ScaleNonLinear.cpp  ScaleNonLinear.h  Shape.cpp  Shape.h  Shift.cpp  Shift.h  Systematic.cpp  Systematic.h
src/teststat/: BinnedNLLH.cpp  BinnedNLLH.h  CMakeLists.txt  ChiSquare.cpp  ChiSquare.h  QuadraticConstraint.h  StatisticSum.cpp  StatisticSum.h  TestStatistic.cpp  TestStatistic.h
test/unit/: AxisCollectionTest.cpp  BinAxisTest.cpp  BinnedEDGeneratorTest.cpp  BinnedEDManagerTest.cpp  BinnedEDShrinkerTest.cpp  BinnedEDTest.cpp  BinnedNLLHTest.cpp  CMakeLists.txt  CatchInit.cpp  ComponentManagerTest.cpp  CompositeEDTest.cpp  ConstraintsTest.cpp  ConvolutionTest.cpp  CutTest.cpp  DataSetGenerator.cpp  DataSetGeneratorTest.cpp  DataSetIOTest.cpp  DistToolsTest.cpp  EDManagerTest.cpp  EventScaleTest.cpp  EventShiftTest.cpp  EventSystematicManagerTest.cpp  FitParameterTest.cpp  GaussianFitterTest.cpp  GaussianTest.cpp  HistIntegral.cpp  HistToolsTest.cpp  HistogramGetMultiDSlice.cpp  HistogramIOTest.cpp  Minuit.cpp  MinuitTest.cpp  ObservableSetTest.cpp  ParameterManagerTest.cpp  RenormSystTest.cpp  SConscript  ScaleFuncSystTest.cpp  ScaleSystTest.cpp  ShapeTest.cpp  ShiftSystTest.cpp  SpectralFitDistTest.cpp  (+4 more)
util/: Compile.txt  antinu_cleaning.cpp  antinu_cleaning_multi.cpp  antinu_cleaning_multiple.cpp  antinu_cleaning_util.cpp  antinu_cut_analysis.cpp  calc_eff_rad  (+20 more)
(+2 files in other folders)
